--- a/harvesthub/project/templates/harvesthub.html
+++ b/harvesthub/project/templates/harvesthub.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,12 +8,10 @@
 
     <!-- Bootstrap CSS (Bootstrap begins here) -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-    <!-- Custom CSS -->
-<!--    <link rel="stylesheet" href="../static/css/styles.css">-->
     {% load static %}
 
-    <link href="{% static 'css/styless.css'%}"/>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
 </head>
 <body>
     <!-- Navigation Section -->
@@ -39,8 +35,7 @@
     </nav>
 <main role="main"> 
 <!-- Header Section -->
-    <header class="jumbotron text-center" role="banner" >
-        <img src="{% static 'images/header.jpg'%}" alt="">
+    <header class="jumbotron text-center" role="banner" style="background-image: url('{% static "images/header.jpg"%}'); height: 400px; background-size: cover; background-position: center; color: white;">
         <div class="container">
             <h1 class="display-4">Hello, welcome to harvest hub</h1>
             <p class="lead">Happy farmer, happy life.</p>
@@ -49,17 +44,21 @@
     </header>
 
 <!-- About Section  start-->
-    <section id="about" class="py-5">
-            <div class="row">
-                <div class="col-lg-5">
-                    <h2>About us</h2>
-                    <p>we help farmers learn the prices of crops at their nearest market. </p>
-                </div>
-                <div class="col-lg-7">
-                    <img src="../static/images/about.jpg" alt=" Picture" width="100%" class="About-image">
-                </div>
-            </div>
-    </section>
+    <section id="about" class="py-6">
+    <div class="Container">
+    <div class="row">
+        <div class="col-lg-5">
+            <h2>About Us</h2>
+            <p><strong>Our Mission</strong>: At Harvest Hub, our mission is to empower farmers by providing them with real-time crop prices and market insights, enabling them to make informed decisions that lead to better outcomes.</p>
+            <p><strong>Our Vision</strong>: To create a sustainable agricultural future by connecting farmers with essential market data that enhances their productivity and profitability.</p>
+            <p><strong>The Problem We're Solving</strong>: Farmers often struggle to find accurate, up-to-date crop price information, which hinders their ability to make informed decisions. Harvest Hub bridges this gap by providing reliable, real-time data that helps farmers optimize their production and sales.</p>
+        </div>
+        <div class="col-lg-7">
+            <img src="../static/images/about.jpg" alt=" Picture" width="100%" >
+        </div>
+    </div>
+    </div>
+</section>
 <!--about section end-->
 
 <!-- Solution Section -->
@@ -77,7 +76,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="../static/images/solution2.jpg" class="card-img-top" alt="solution" loading="lazy">
+                        <img src="../static/images/solution2.jpg" class="card-img-top" alt="solution" loading="lazy" height=60%>
                         <div class="card-body">
                             <h5 class="card-title">Know your market</h5>
                             <p class="card-text">Through us you will be able to identify open gap within the market that will best fit you </p>
